# bgm-project

./: README.md  app.js  demo_3d.html  demo_3d.js  game_simulator.js  index.html  pedalboard.html  pedalboard.js  rules_engine.js  rules_engine2.js
Gain/: gain-comparison.html  index.html
Gain/exam/: experiment.html
basic/: example.js  index.html  lib.js
effect/: app.js  index.html  style.css
game_simulator_cpp/: .gitignore  CMakeLists.txt  README.md  main.cpp
log/: log.js
